--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                         <a href="https://www.linkedin.com/in/sajan-biswal-4397b7201" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                         <a href=""><i class="fa-brands fa-twitter-square"></i></a>
                     </div>
-                    <a href="images/my-cv.pdf" download class="btn btn2">Download Resume</a>
+                    <a href="images/Sajan Biswal.pdf" download class="btn btn2">Download Resume</a>
                 </div>
                 <div class="contact-right">
                     <form name="submit-to-google-sheet">
